--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,20 @@
-
+server:
+  port: 8080
+  compression:
+    enabled: true
+    mime-types: application/json
+  servlet:
+    context-path: /vouchers
+spring:
+  application:
+    name: ms-pool-vouchers
+  data:
+    mongodb:
+      uri: mongodb://localhost:37017/teste
+springdoc:
+  packagesToScan: br.com.pool.vouchers.api.entrypoint
+  pathsToMatch: /**
+  swagger-ui:
+    disable-swagger-default-url: true
+    doc-expansion: none
+    tagsSorter: alpha
