Finalizando implementação, arquivo docker-compose, readme.me, coleção para postman

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     name: ms-pool-vouchers
   data:
     mongodb:
-      uri: mongodb://localhost:37017/teste
+      uri: mongodb://localhost:37017/vouchers
   security:
     oauth2:
       resourceserver:
